# pic-example

./: CMakeLists.txt  README.md  foo.h  gen.sh  main.c
dis/: diffu  e.s  e_pic.s
